--- a/mysql_script_notebook.ipynb
+++ b/mysql_script_notebook.ipynb
@@ -200,6 +200,133 @@
     "\n",
     "print(\"Script SQL executado com sucesso!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b4c24a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela produto\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `produto` (\n",
+    "    `idproduto` INT NOT NULL,\n",
+    "    `categoria_idcategoria` INT NOT NULL,\n",
+    "    `logista_cnpj` VARCHAR(30) NULL,\n",
+    "    `nomeproduto` VARCHAR(300) NULL,\n",
+    "    `descricao` VARCHAR(300) NULL,\n",
+    "    `qtestoque` INT NULL,\n",
+    "    `preco` FLOAT NULL,\n",
+    "    PRIMARY KEY (`idproduto`),\n",
+    "    INDEX `categoria_idcategoria_idx` (`categoria_idcategoria` ASC),\n",
+    "    INDEX `logista_cnpj_idx` (`logista_cnpj` ASC),\n",
+    "    CONSTRAINT `categoria_idcategoria`\n",
+    "    FOREIGN KEY (`categoria_idcategoria`)\n",
+    "    REFERENCES `categoriaproduto` (`idcategoria`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `logista_cnpj`\n",
+    "    FOREIGN KEY (`logista_cnpj`)\n",
+    "    REFERENCES `logista` (`cnpj`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e8a1a59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela avaliacao\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `avaliacao` (\n",
+    "    `idavaliacao` INT NOT NULL,\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `idproduto` INT NOT NULL,\n",
+    "    `estrelas` INT NULL,\n",
+    "    `comentario` VARCHAR(500) NULL,\n",
+    "    `dtavaliacao` DATETIME NULL,\n",
+    "    PRIMARY KEY (`idavaliacao`),\n",
+    "    INDEX `usuario_cpf_idx` (`usuario_cpf` ASC),\n",
+    "    INDEX `produto_idproduto_idx` (`idproduto` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `produto_idproduto`\n",
+    "    FOREIGN KEY (`idproduto`)\n",
+    "    REFERENCES `produto` (`idproduto`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61781c63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela carrinho\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `carrinho` (\n",
+    "    `idcarinho` INT NOT NULL,\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `dtvisita` DATETIME NULL,\n",
+    "    `pagina` VARCHAR(45) NULL COMMENT 'URL ou identificador da página vistiada',\n",
+    "    PRIMARY KEY (`idcarinho`),\n",
+    "    INDEX `usuario_cpf_idx` (`usuario_cpf` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2878213",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela itenscarrinho\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `itenscarrinho` (\n",
+    "    `iditenscarrinho` INT NOT NULL,\n",
+    "    `carrinho_idcarinho` INT NOT NULL,\n",
+    "    `produto_idproduto` INT NOT NULL,\n",
+    "    `qtitens` INT NULL,\n",
+    "    PRIMARY KEY (`iditenscarrinho`),\n",
+    "    INDEX `carinho_idcarinho_idx` (`carrinho_idcarinho` ASC),\n",
+    "    INDEX `porduto_idproduto_idx` (`produto_idproduto` ASC),\n",
+    "    CONSTRAINT `carrinho_idcarinho`\n",
+    "    FOREIGN KEY (`carrinho_idcarinho`)\n",
+    "    REFERENCES `carrinho` (`idcarinho`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `porduto_idproduto`\n",
+    "    FOREIGN KEY (`produto_idproduto`)\n",
+    "    REFERENCES `produto` (`idproduto`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
   }
  ],
  "metadata": {},
