--- a/mysql_script_notebook.ipynb
+++ b/mysql_script_notebook.ipynb
@@ -327,6 +327,274 @@
     ") ENGINE = InnoDB;\n",
     "\"\"\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "638edd48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela pagamento\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `pagamento` (\n",
+    "    `idpagamento` INT NOT NULL,\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `pedido_idpedido` INT NOT NULL,\n",
+    "    `metodopagamento` VARCHAR(20) NULL,\n",
+    "    `statuspagamento` VARCHAR(45) NULL,\n",
+    "    `dtpagamento` DATETIME NULL,\n",
+    "    PRIMARY KEY (`idpagamento`),\n",
+    "    INDEX `usuario_cpf_idx` (`usuario_cpf` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "372052b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela pedido\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `pedido` (\n",
+    "    `idpedido` INT NOT NULL,\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `carrinho_idcarrinho` INT NOT NULL,\n",
+    "    `endereco_idendereco` INT NOT NULL,\n",
+    "    `pagamento_idpagamento` INT NOT NULL,\n",
+    "    `itempedido_iditenspedido` INT NOT NULL,\n",
+    "    `dtpedido` DATETIME NULL,\n",
+    "    `statuspedido` VARCHAR(45) NULL,\n",
+    "    `custototal` FLOAT NULL,\n",
+    "    PRIMARY KEY (`idpedido`),\n",
+    "    INDEX `carrinho_idcarrinho_idx` (`carrinho_idcarrinho` ASC),\n",
+    "    INDEX `endereco_idendereco_idx` (`endereco_idendereco` ASC),\n",
+    "    INDEX `pagamento_idpagamento_idx` (`pagamento_idpagamento` ASC),\n",
+    "    INDEX `itempedido_iditenspedido_idx` (`itempedido_iditenspedido` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `carrinho_idcarrinho`\n",
+    "    FOREIGN KEY (`carrinho_idcarrinho`)\n",
+    "    REFERENCES `carrinho` (`idcarinho`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `endereco_idendereco`\n",
+    "    FOREIGN KEY (`endereco_idendereco`)\n",
+    "    REFERENCES `endereco` (`idendereco`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `pagamento_idpagamento`\n",
+    "    FOREIGN KEY (`pagamento_idpagamento`)\n",
+    "    REFERENCES `pagamento` (`idpagamento`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `itempedido_iditenspedido`\n",
+    "    FOREIGN KEY (`itempedido_iditenspedido`)\n",
+    "    REFERENCES `itenspedido` (`iditenspedido`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d94f8ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela itenspedido\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `itenspedido` (\n",
+    "    `iditenspedido` INT NOT NULL,\n",
+    "    `pedido_idpedido` INT NOT NULL,\n",
+    "    `produto_idproduto` INT NOT NULL,\n",
+    "    PRIMARY KEY (`iditenspedido`),\n",
+    "    INDEX `produto_idproduto_idx` (`produto_idproduto` ASC),\n",
+    "    INDEX `pedido_idpedido_idx` (`pedido_idpedido` ASC),\n",
+    "    CONSTRAINT `pedido_idpedido`\n",
+    "    FOREIGN KEY (`pedido_idpedido`)\n",
+    "    REFERENCES `pedido` (`idpedido`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `produto_idproduto`\n",
+    "    FOREIGN KEY (`produto_idproduto`)\n",
+    "    REFERENCES `produto` (`idproduto`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5443716b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela logsvisitas\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `logsvisitas` (\n",
+    "    `idlogsvisitas` INT NOT NULL AUTO_INCREMENT COMMENT '1:N Isso significa que um usuário pode ter várias visitas registradas, mas cada visita é associada a um único usuário.',\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `datavisita` DATETIME NULL,\n",
+    "    `url` VARCHAR(45) NULL COMMENT 'URL ou identificador da página visitada',\n",
+    "    `termoconsultado` VARCHAR(255) NULL,\n",
+    "    PRIMARY KEY (`idlogsvisitas`),\n",
+    "    INDEX `usuario_cpf_idx` (`usuario_cpf` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8901439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela logmovimentacoescarrinho\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `logmovimentacoescarrinho` (\n",
+    "    `idlogmovimentacoescarrinho` INT NOT NULL AUTO_INCREMENT,\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `carrinho_idcarrinho` INT NOT NULL,\n",
+    "    `produto_idproduto` INT NOT NULL,\n",
+    "    `tipomovimentacao` VARCHAR(15) NULL COMMENT '-- Tipo de movimentação (adição ou remoção)',\n",
+    "    `qtd` INT NULL,\n",
+    "    `datamovimentacao` INT NULL,\n",
+    "    PRIMARY KEY (`idlogmovimentacoescarrinho`),\n",
+    "    INDEX `usuario_cpf_idx` (`usuario_cpf` ASC),\n",
+    "    INDEX `carrinho_idcarrinho_idx` (`carrinho_idcarrinho` ASC),\n",
+    "    INDEX `produto_idproduto_idx` (`produto_idproduto` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `carrinho_idcarrinho`\n",
+    "    FOREIGN KEY (`carrinho_idcarrinho`)\n",
+    "    REFERENCES `carrinho` (`idcarinho`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `produto_idproduto`\n",
+    "    FOREIGN KEY (`produto_idproduto`)\n",
+    "    REFERENCES `produto` (`idproduto`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2680e7b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela logtempotela\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `logtempotela` (\n",
+    "    `idlogtempotela` INT NOT NULL AUTO_INCREMENT,\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `url` VARCHAR(45) NULL,\n",
+    "    `tempo` INT NULL,\n",
+    "    `data` DATETIME NULL,\n",
+    "    PRIMARY KEY (`idlogtempotela`),\n",
+    "    INDEX `usuario_cpf_idx` (`usuario_cpf` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1273412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela logcompras\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `logcompras` (\n",
+    "    `idcompras` INT NOT NULL AUTO_INCREMENT,\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `pedido_idpedido` INT NOT NULL,\n",
+    "    `data` DATETIME NULL,\n",
+    "    `total` FLOAT NULL,\n",
+    "    PRIMARY KEY (`idcompras`),\n",
+    "    INDEX `usuario_cpf_idx` (`usuario_cpf` ASC),\n",
+    "    INDEX `pedido_idpedido_idx` (`pedido_idpedido` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION,\n",
+    "    CONSTRAINT `pedido_idpedido`\n",
+    "    FOREIGN KEY (`pedido_idpedido`)\n",
+    "    REFERENCES `pedido` (`idpedido`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8178202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar tabela loggeral\n",
+    "cursor.execute(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS `loggeral` (\n",
+    "    `idloggeral` INT NOT NULL AUTO_INCREMENT,\n",
+    "    `usuario_cpf` BIGINT NOT NULL,\n",
+    "    `tipoevento` VARCHAR(45) NULL COMMENT '-- Tipo do evento 'Erro', 'Atualizacao', 'Outro'..',\n",
+    "    `descricao` VARCHAR(3000) NULL COMMENT '-- Descrição detalhada do evento',\n",
+    "    `data` DATETIME NULL,\n",
+    "    PRIMARY KEY (`idloggeral`),\n",
+    "    INDEX `usuario_cpf_idx` (`usuario_cpf` ASC),\n",
+    "    CONSTRAINT `usuario_cpf`\n",
+    "    FOREIGN KEY (`usuario_cpf`)\n",
+    "    REFERENCES `usuario` (`cpf`)\n",
+    "    ON DELETE NO ACTION\n",
+    "    ON UPDATE NO ACTION\n",
+    ") ENGINE = InnoDB;\n",
+    "\"\"\")\n"
+   ]
   }
  ],
  "metadata": {},
